# quantlab

./: .gitignore  .mypy.ini  .ruff.toml  LICENSE  README.md  makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  quality-and-test.yml  quality.yml  test.yml
docs/: _meta.ts  architecture.mdx  getting-started.mdx  index.mdx  overview.mdx  status.mdx  testing.mdx  workflows.mdx
docs/api/: _meta.ts  backend-api.mdx  index.mdx  inventory.mdx  ops-api.mdx  simulation-api.mdx  types-and-exceptions.mdx
docs/architecture/: _meta.ts  backend-abstraction.mdx  index.mdx  simulation-pipeline.mdx
docs/backends/: _meta.ts  fallback.mdx  index.mdx  jax.mdx  numpy.mdx  torch.mdx
docs/backtesting/: index.mdx  strategy.mdx
docs/getting-started/: _meta.ts  index.mdx  installation.mdx  quickstart.mdx
docs/guides/: _meta.ts  autodiff-jit-vmap.mdx  backend-selection.mdx  ecosystem-integration.mdx  index.mdx  monte-carlo-gbm.mdx
docs/pricing/: index.mdx  options.mdx  pricers.mdx
docs/testing/: _meta.ts  ci-workflows.mdx  index.mdx  test-matrix.mdx
laakhay/: __init__.py
laakhay/quantlab/: __init__.py  _version.py
laakhay/quantlab/backend/: __init__.py  backend.py  device.py  interface.py  ops.py  registry.py
laakhay/quantlab/backend/implementations/: __init__.py  fallback.py  jax.py  numpy.py  torch.py
laakhay/quantlab/backtest/: __init__.py  config.py  feed.py
laakhay/quantlab/backtest/analytics/: __init__.py  aggregate.py
laakhay/quantlab/backtest/api/: __init__.py  runner.py
laakhay/quantlab/backtest/domain/: __init__.py  account.py  bar.py  config.py  enums.py  events.py  order.py  position.py  signal.py  trade.py
laakhay/quantlab/backtest/engine/: __init__.py  core.py  oms.py  sizer.py
laakhay/quantlab/backtest/execution/: __init__.py  allocation.py  engine_portfolio.py  engine_single.py  risk.py  scheduler.py
laakhay/quantlab/backtest/feed/: __init__.py  base.py  multi.py  single.py
laakhay/quantlab/backtest/metrics/: __init__.py  performance.py  timeframe.py  trades.py
laakhay/quantlab/backtest/models/: __init__.py  bar.py  order.py  position.py  signal.py  trade.py
laakhay/quantlab/backtest/report/: __init__.py  adapters.py  builders.py  schema.py
laakhay/quantlab/backtest/strategy/: base.py
laakhay/quantlab/exceptions/: __init__.py
laakhay/quantlab/pricing/: __init__.py  greeks.py  market.py  utils.py
laakhay/quantlab/pricing/options/: __init__.py  asian.py  barrier.py  base.py  contracts.py  digital.py  strategies.py
laakhay/quantlab/pricing/pricers/: __init__.py  monte_carlo.py  pricer.py
laakhay/quantlab/pricing/pricers/black_scholes/: __init__.py  calculations.py  registry.py
laakhay/quantlab/pricing/pricers/black_scholes/formulas/: asian.py  barrier.py  digital.py  european.py
laakhay/quantlab/pricing/pricers/greeks/: __init__.py  base.py  engine.py  finite_diff.py  utils.py
laakhay/quantlab/pricing/simulations/: base.py  models.py  samplers.py
laakhay/quantlab/simulations/: __init__.py  gbm.py
laakhay/quantlab/simulations/samplers/: __init__.py  base.py  gaussian.py
laakhay/quantlab/types/: __init__.py  backend.py  base.py
plans/: decouple-quantlab-from-ta-data-via-kendra-plan.md
tests/: __init__.py
tests/quantlab/: __init__.py
tests/quantlab/backend/: __init__.py  test_core.py  test_math.py  test_system.py
tests/unit/: __init__.py  conftest.py
tests/unit/pricing/: conftest.py  test_black_scholes.py  test_contracts.py  test_monte_carlo.py  test_pricer_interface.py
tests/unit/quantlab/: __init__.py
tests/unit/quantlab/backend/: test_backend_coverage.py  test_core.py  test_device_coverage.py  test_fallback_coverage.py  test_math.py  test_ops_coverage.py  test_registry.py  test_system.py  test_torch_coverage.py
tests/unit/quantlab/backtest/: test_backtest_engine.py  test_batch_runner.py  test_config_validation.py  test_engine_bugs.py  test_engine_constraints.py  test_engine_execution.py  test_metrics.py  test_multi_feed.py  test_portfolio_engine.py  test_report_contract.py  test_strategy_logic.py
tests/unit/quantlab/simulations/: test_gbm.py  test_simulations_coverage.py
tests/unit/quantlab/simulations/samplers/: test_gaussian.py
tests/unit/quantlab/types/: test_types.py
