[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "laakhay-quantlab"
dynamic = ["version"]
description = "Quant tools built with ♥︎ by Laakhay"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Laakhay Corporation", email = "laakhay.corp@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.21.0", "scipy>=1.10.0"]
jax = ["jax[cpu]>=0.4.0"]
jax-gpu = ["jax[cuda]>=0.4.0"]
torch = ["torch>=2.0.0"]
all = ["numpy>=1.21.0", "scipy>=1.10.0", "jax[cpu]>=0.4.0", "torch>=2.0.0"]

[project.urls]
Homepage = "https://laakhay.com"
Repository = "https://github.com/laakhay/quantlab"

[tool.setuptools_scm]
write_to       = "laakhay/quantlab/_version.py"
version_scheme = "post-release"
local_scheme   = "no-local-version"
